--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-<link rel='stylesheet' href='index.css' type='text' />
 <title>My website</title>
 </head>
 <body>
-
+ <link rel="stylesheet" type="text/css" href="index.css" />
 <h1>Poem</h1>
 <p>Hold fast to dreams
 For if dreams die
