--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>My website</title>
 </head>
 <body>
- <link rel="stylesheet" type="text" href="index.css" />
+ <link rel="stylesheet" type="text" href="style.css" />
 <h1>Poem</h1>
 <p>Hold fast to dreams
 For if dreams die
