--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html>
-<head>
-<title>My website</title>
-</head>
-<body>
- <link rel="stylesheet" type="text" href="style.css" />
-<h1>Poem</h1>
-<p>Hold fast to dreams
+  <head>
+    <title>poem</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h1>Poem</h1>
+    <p>Hold fast to dreams
 For if dreams die
 Life is a broken-winged bird
-That cannot fly.
-
-Source: https://www.familyfriendpoems.com/collection/famous-short-poems/</p>
-
-</body>
+That cannot fly.</p>
+  </body>
 </html>
