--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
   <head>
-    <title>Embedded Style Sample</title>
+    <title>poem</title>
+    <title>Style Sample</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <h1>Poem</h1>
+    <p>Hold fast to dreams
+For if dreams die
+Life is a broken-winged bird
+That cannot fly.</p>
     <h1>Embedded Style Sample testing</h1>
     <h2>Next Line</h2>
   </body>
