--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>poem</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link href="styles.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <h1>Poem</h1>
