--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+    <link href="style.css" type="text/css" rel="stylesheet" />
     <h1>Poem</h1>
     <p>Hold fast to dreams
 For if dreams die
