--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>poem</title>
+    <script>
+      alert("added java script!");
+    </script>
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
