--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@ For if dreams die
 Life is a broken-winged bird
 That cannot fly.</p>
 
+<h2>What Can JavaScript Do?</h2>
+
+<p id="demo">JavaScript can change HTML content.</p>
+
+<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+
   </body>
 </html>
